--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1> Binevenue dans Rbnb le site de location de rien <h1>
+
+
+click ici pour t inscrire et la pour te connecter
+<%=link_to 'inscription', new_user_registration_path %>
+
+
